--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 absl-py==0.11.0
+albumentations==0.5.2
 antlr4-python3-runtime==4.8
 appdirs==1.4.4
 black==20.8b1
@@ -8,6 +9,7 @@ chardet==3.0.4
 click==7.1.2
 cycler==0.10.0
 dataclasses==0.6
+decorator==4.4.2
 efficientnet-pytorch==0.6.3
 future==0.18.2
 google-auth==1.24.0
@@ -15,6 +17,8 @@ google-auth-oauthlib==0.4.2
 grpcio==1.34.0
 hydra-core==1.0.4
 idna==2.10
+imageio==2.9.0
+imgaug==0.4.0
 importlib-metadata==3.1.1
 importlib-resources==3.3.0
 kiwisolver==1.3.1
@@ -22,10 +26,12 @@ Markdown==3.3.3
 matplotlib==3.3.3
 munch==2.5.0
 mypy-extensions==0.4.3
+networkx==2.5
 numpy==1.19.4
 oauthlib==3.1.0
 omegaconf==2.0.5
 opencv-python==4.4.0.46
+opencv-python-headless==4.5.1.48
 pathspec==0.8.1
 Pillow==8.0.1
 pretrainedmodels==0.7.4
@@ -34,15 +40,20 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pyparsing==2.4.7
 python-dateutil==2.8.1
+PyWavelets==1.1.1
 PyYAML==5.3.1
 regex==2020.11.13
 requests==2.25.0
 requests-oauthlib==1.3.0
 rsa==4.6
+scikit-image==0.18.1
+scipy==1.6.0
 segmentation-models-pytorch==0.1.2
+Shapely==1.7.1
 six==1.15.0
 tensorboard==2.4.0
 tensorboard-plugin-wit==1.7.0
+tifffile==2021.1.14
 timm==0.1.20
 toml==0.10.2
 torch==1.7.0
