--- a/config.yaml
+++ b/config.yaml
@@ -16,9 +16,11 @@ data:
   eval_path: "/home/rveeramalli/ufo-segmentation/data_v1/eval" # Path for model evaluation on test data
   rescale: "bbox" # Mode bbox or normal
   augmentation: 0 # Include data augmentation or not
+#  aug_types: []
+  test_split: 0.1 # Percentage of data in the test corpus set
 
 model:
-  name: "unet" # Name of the segmentation model
+  name: "pspnet" # Name of the segmentation model
   encoder_name: "mobilenet_v2" # type of encoder the model is built with.
   in_channels: 1 # Inputs are grauscale images
   activation: "sigmoid" # could be "softmax2d" for mutliclass or 'sigmoid' for binary
@@ -30,13 +32,14 @@ train:
   optimizer: "adam"  # optimizer for training
   lr: 0.001  # learning rate for the optimizer
   gpus: 1  # number of gpus to use in training
+  workers: 4 # number of worker cores to use
   check_val_every_n_epoch: 1  # how often should validation be checked for early stopping
   max_epochs: 30  # maximum number of training epochs
   precision: 32  # bit precision for use in training, either 32 or 16
   saved_model_path: "/home/rveeramalli/ufo-segmentation/src/saved_models" # Path to store trained models
 
 evaluation:
-  threshold: 0.5
+  threshold: 0.75
 
 early_stopping:
   metric: "validation/loss"  # metric for early stopping criterion
